add Adding Custom Icons to a Toolbar
https://codingwithmitch.com/courses/sqlite-room-persistence-android/adding-custom-icons-toolbar/

--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -16,6 +16,7 @@
             android:layout_height="match_parent"
             android:id="@+id/note_toolbar">
 
+            <include layout="@layout/layout_note_toolbar"/>
 
         </android.support.v7.widget.Toolbar>
 
